Changes to be committed: 	modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,10 @@ button:hover > a{
     color: hsl(0, 0%, 8%);
     font-weight: 780;
 }
+
+
+@media screen and (max-width: 562px) {
+    .container{
+        margin: 50px ;
+    }
+}
