Changes to be committed: 	modified:   index.html 	modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body{
 }
 
 .container{
-    margin: 50px auto;
+    margin: 50px auto 0px auto;  
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -36,7 +36,7 @@ p{
     font-weight: 400;
 }
 
-h5{
+h4{
     margin-top: 0px;
     color: hsl(75, 94%, 57%);
     font-weight: 600;
@@ -53,8 +53,10 @@ button{
     margin: 10px;
     background-color: hsl(0, 0%, 20%);
     border: 1px solid transparent;
-    border-radius: 10px;
+    border-radius: 8px;
     cursor: pointer;
+    color: hsl(0, 0%, 100%);
+    font-weight: 700;
 }
 
 a{ 
@@ -65,6 +67,8 @@ a{
 
 button:hover{
     background-color: hsl(75, 94%, 57%);
+    color: hsl(0, 0%, 8%);
+    font-weight: 780;
 }
 
 button:hover > a{
